# mode7new

./: .gitignore  CMakeLists.txt  NOTES  README.md
src/: Camera.cpp  Camera.h  RotateRect.h  function.h  main.cpp
src/Logger/: Logger.cpp  Logger.h
